--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 # local package
 -e .
+ 
+torch
+pytorch-lightning
+transformers
+sentencepiece
 
-# external requirements
+ 
+pandas
+tqdm
 click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+ 
+wandb
+hydra-core
