feat: format code with black and fix gitignore (M7, M8)

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,13 @@ target/
 
 # Mypy cache
 .mypy_cache/
+ 
+/models/*
+!/models/.gitkeep
+
+ 
+/lightning_logs/
+/outputs/
+/multirun/
+ 
+.pdm-python
