--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -11,11 +11,12 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
+        # 
         python-version: ["3.11"]
         os: ["ubuntu-latest"]
 
     steps:
-      - uses: actions/checkout@v4 # 使用更新的 v4 版本
+      - uses: actions/checkout@v4 #
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -38,9 +39,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-        
+          # 注意：linting 其实不需要安装全部 requirements，但模仿他的写法建议保留
           pip install flake8
 
       - name: Run flake8
- 
+        # 
         run: flake8 src tests --max-line-length=120 --ignore=F401,E402
