--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = local_remote
+    remote = gcp_storage
 ['remote "local_remote"']
     url = E:\dvc_remote_storage
+['remote "gcp_storage"']
+    url = gs://dtu-mlops-data1/data
