--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,32 @@
 steps:
-  # 步骤 1: 构建预测镜像 (Predict Image)
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build', 
-      '-t', 'gcr.io/dtu-mlops-project-484513/predict:latest', 
-      '-f', 'predict.dockerfile', 
-      '.'
-    ]
-  # 步骤 2: 推送到镜像仓库
+    args: ['build', '-t', 'gcr.io/dtu-mlops-project-484513/predict:latest', '-f', 'predict.dockerfile', '.']
+
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/dtu-mlops-project-484513/predict:latest']
 
-images:
-  - 'gcr.io/dtu-mlops-project-484513/predict:latest'
+  - name: 'gcr.io/dtu-mlops-project-484513/predict:latest'
+    dir: '/app'
+    entrypoint: 'sh'
+    env:
+      - 'GOOGLE_APPLICATION_CREDENTIALS=/app/dtu-mlops-project-484513-db6b7e34022c.json'
+      - 'PYTHONPATH=.'
+    args:
+      - '-c'
+      - |
+        echo "--- 诊断：当前文件列表 ---"
+        ls -a /app
+        
+        # 1. 禁用 SCM 检查
+        dvc config core.no_scm true
+        
+        # 2. 使用你查到的正确名称 gcp_storage 绑定密钥
+        echo "--- 正在配置 DVC 远程: gcp_storage ---"
+        dvc remote modify --local gcp_storage credentialpath /app/dtu-mlops-project-484513-db6b7e34022c.json
+        
+        # 3. 执行拉取 (增加 -v 查看详细过程)
+        echo "--- 正在从 GCS 拉取数据 ---"
+        dvc pull -v
+        
+        # 4. 运行训练
+        python src/models/train_model.py --epochs 1 --batch_size 4
