--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,33 +4,39 @@ on: [push, pull_request]
 
 jobs:
   run_tests:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.10", "3.11"]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11' # 保持与你 Docker 镜像一致
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Cache pip dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-py${{ matrix.python-version }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-py${{ matrix.python-version }}-pip-
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        # 按照你的需求填充依赖 [cite: 2026-01-09]
-        pip install -r requirements.txt
-        # 安装测试专用工具 [cite: 2026-01-09]
-        pip install pytest pytest-cov coverage flake8 protobuf datasets
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-cov
 
-    - name: Run Pytest with Coverage
-      run: |
-        pytest --cov=src tests/
+      - name: Run tests (with coverage)
+        env:
+          HF_HOME: .hf_cache
+          TRANSFORMERS_CACHE: .hf_cache
+          TOKENIZERS_PARALLELISM: "false"
+        run: |
+          pytest -q --cov=src --cov-report=term-missing tests/
