M19: trigger data-change workflow via .dvcignore

--- a/.dvcignore
+++ b/.dvcignore
@@ -1,3 +1,4 @@
 # Add patterns of files dvc should ignore, which could improve
 # the performance. Learn more at
 # https://dvc.org/doc/user-guide/dvcignore
+# m19 trigger Fri Jan 23 22:38:29 CST 2026
